[project]
name = "rdock-utils"
version = "0.1.0"
description = "Utilities for working with RDock and operating on SD files"
requires-python = ">=3.10.0"


[project.scripts]
sdfield = "rdock_utils.sdfield:main"
sdrmsd = "rdock_utils.sdrmsd.main:main"

[project.urls]
Repository = "https://github.com/CBDD/rDock.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdock_utils*"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"