[project]
dynamic = ["dependencies", "optional-dependencies"]
name = "rdock-utils"
version = "0.1.0"
description = "Utilities for working with RDock and operating on SD files"
requires-python = ">=3.10.0"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = { dev = {file = ["requirements-dev.txt"]} }

[project.scripts]
sdfield = "rdock_utils.sdfield:main"
sdrmsd_old = "rdock_utils.sdrmsd_original:main"
sdrmsd = "rdock_utils.sdrmsd.main:main"
sdsplit = "rdock_utils.sdsplit:main"
sdtether = "rdock_utils.sdtether.main:main"
sdtether_old = "rdock_utils.sdtether_original:main"
sdfilter = "rdock_utils.sdfilter.main:main"
sdmodify = "rdock_utils.sdmodify:main"
sdsort = "rdock_utils.sdsort:main"

[project.urls]
Repository = "https://github.com/CBDD/rDock.git"

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [".git", "__pycache__", "rdock_utils/sdrmsd_original.py", "rdock_utils/sdtether_original.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E231","E501","E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_context = true
show_error_codes = true

follow_imports = "silent"
ignore_missing_imports = true

disallow_incomplete_defs = true
disallow_any_generics = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

warn_unused_configs = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

check_untyped_defs = true

no_implicit_optional = true
no_implicit_reexport = false

strict_equality = true

exclude = ["build/*", "rdock_utils/sdrmsd_original.py", "tests/", "rdock_utils/sdtether_original.py"]
